// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginTop": 10,
      "padding": 10,
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "minHeight": 40,
        "paddingBottom": 10,
        "paddingHorizontal": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Beginner
      </Text>
      <Text
        style={
          {
            "color": "#232b2b",
            "fontSize": 14,
            "textAlign": "right",
          }
        }
      >
        0/1
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#f1f1f1",
          "borderRadius": 2,
          "height": 3,
          "marginTop": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#2a9e91",
              "borderRadius": 5,
              "width": "50%",
            },
            {
              "width": "0%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Program /> renders correctly when finished 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginTop": 10,
      "padding": 10,
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "minHeight": 40,
        "paddingBottom": 10,
        "paddingHorizontal": 20,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
          }
        }
      >
        Beginner
      </Text>
      <Text
        style={
          {
            "color": "#232b2b",
            "fontSize": 14,
            "textAlign": "right",
          }
        }
      >
        2/2
         👍🎉
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#f1f1f1",
          "borderRadius": 2,
          "height": 3,
          "marginTop": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#2a9e91",
              "borderRadius": 5,
              "width": "50%",
            },
            {
              "width": "100%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
